--- a/assignment-naivebayes-diy.Rmd
+++ b/assignment-naivebayes-diy.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Assigment - Naive Bayes DIY"
 author:
-  - name author here - Author
-  - name reviewer here - Reviewer
+  - name author here - Thijs van Dam
+  - name reviewer here - Friso Willemsen
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
    html_notebook:
